# martletplace

./: README.md  docker-compose.yml  package-lock.json  test.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1_feature_request.md  2_bug_report.md
.github/workflows/: algorithm.yml  backend-lib.yml  backend.yml  datalayer.yml  e2e.yml  frontend.yml  linked_issues.yml  listing.yml  loadtest.yml  message.yml  pr.yml  recommend.yml  review.yml  search.yml  security.yml  user.yml
apps/algorithm/recommend/: .bandit  .gitignore  Dockerfile  README.md  readme.md  requirements.txt
apps/algorithm/search/: Dockerfile  README.md  requirements.txt
apps/backend/charity/: Dockerfile  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
apps/backend/lib/: cypress.config.ts  (+3 more)
apps/data/datalayer/: Cargo.toml  Dockerfile  README.md  supervisord.conf
apps/data/datalayer/src/: elastic.rs  email.rs  example.rs  image.rs  jwt.rs  main.rs
apps/frontend/: .env  .eslintrc.cjs  .gitignore  Dockerfile  README.md  cypress.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/proxy/: dynamic_config.yml  traefik.yml
infra/: .gitignore  .terraform.lock.hcl  alb.tf  database.tf  db-init.sh  db.tf  ecr.tf  ecs-services.tf  ecs.tf  iam.tf  jwt.tf  network.tf  opensearch.tf  provider.tf  push-containers.sh  secrets.tf  security.tf  variables.tf
infra/ecs/: ecs-module.tf  variables.tf
test/load/: .gitignore  Cargo.toml  Dockerfile  create_perf_branch.sh  local.sh  run.sh
test/load/src/: main.rs
(+268 files in other folders)
