[package]
name = "loadtest"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = "^1.15"
goose = { git = "https://github.com/MNThomson/goose", branch = "0.16.4-report", features = ["gaggle"] }
goose-eggs = { git = "https://github.com/MNThomson/goose-eggs", branch = "0.4.0-report" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fake = { version = "2.9.2", features = ["derive", "uuid"] }
rand = "0.8.4"
