[package]
name = "datalayer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
mime = "0.3.17"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tower = "0.4.13"
uuid = { version = "1.9.1", features = ["v4"]}

[dev-dependencies]
rstest = "0.21.0"
